# kiv-ppr

./: .gitignore  CMakeLists.txt  Makefile  README.md  ppr.conf
include/: calcs.hpp  comp_conf.hpp  conf_loader.hpp  data_loader.hpp  json.hpp  range.hpp
src/: calcs.cpp  comp_conf.hpp  conf_loader.cpp  data_loader.cpp  data_loader.hpp  gpu_calcs.cpp  kernels.cl  main.cpp
